# fiefdom

./: .gitignore  README.md  demo.md
cupbearer/: .env.example  .gitignore  AGENTS.md  Makefile  README.md  architecture-v1.md  plan-v1.md  pyproject.toml  seed.md
cupbearer/.github/workflows/: e2e.yml
cupbearer/migrations/: 0001_init.sql
cupbearer/scripts/: migrate.py  seed.py
cupbearer/src/cupbearer/: actions.py  agent.py  config.py  logging.py  main.py  memory.py  orchestrator.py  policy.py  time_utils.py  twilio.py  whatsapp_reactions.py  whatsapp_service.py  worker.py
cupbearer/tasks/: README.md  task1.md  task10.md  task11.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md  task9.md
cupbearer/tests/e2e/: conftest.py  test_action_runner_integration.py  test_agent_loop_whatsapp.py  test_database_migrations.py  test_event_repository.py  test_ingest_idempotency.py  test_ingest_validation.py  test_job_worker.py  test_service_boot_and_health.py  test_twilio_live_smoke.py  test_twilio_whatsapp_transport.py
steersman/: AGENTS.md  README.md  pyproject.toml
steersman/.steersman/: audit.jsonl
steersman/docs/: README.md  gut-check.md
steersman/docs/tasks/: README.md
steersman/scripts/: gut_check.sh
steersman/steersman/: __init__.py  __main__.py  app.py  audit.py  cli.py  config.py  errors.py  kernel.py  launchd.py  models.py  policy.py  server.py
steersman/steersman/routes/: v1.py
steersman/steersman/skills/: __init__.py  imessage.py  reminders.py
steersman/tests/e2e/: __init__.py  test_server_e2e.py  utils.py
(+10 files in other folders)
